--- a/ProjFinalAndroid/app/src/main/AndroidManifest.xml
+++ b/ProjFinalAndroid/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".ScoreAddActivity"></activity>
+        <activity android:name=".SettingsActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
