--- a/ProjFinalServer/nbproject/project.properties
+++ b/ProjFinalServer/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProjFinalServer
 excludes=
 file.reference.gson-2.8.5.jar=G:\\Google Drive\\Cegep\\H19\\res\\gson-2.8.5.jar
+file.reference.gson-2.8.5.jar-1=gson-2.8.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.gson-2.8.5.jar}
+    ${file.reference.gson-2.8.5.jar}:\
+    ${file.reference.gson-2.8.5.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
