--- a/ProjFinalServer/nbproject/private/private.properties
+++ b/ProjFinalServer/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
-file.reference.gson-2.8.5.jar=D:\\ResProjFinal\\ResProjFinal\\ProjFinalServer\\gson-2.8.5.jar
-user.properties.file=C:\\Users\\info1\\AppData\\Roaming\\NetBeans\\10.0\\build.properties
+file.reference.gson-2.8.5.jar=G:\\repos\\ResProjFinal\\ProjFinalServer\\gson-2.8.5.jar
+user.properties.file=C:\\Users\\acote\\AppData\\Roaming\\NetBeans\\10.0\\build.properties
